--- a/menu.html
+++ b/menu.html
@@ -86,6 +86,14 @@
             <h2 class="blind" id="contents__tit">본문</h2>
             <section>
                 <p>contents...</p>
+                <div class="motion">
+                    <span></span>
+                    <img src="" alt="">
+                </div>
+                <div class="motion">
+                    <span></span>
+                    <img src="" alt="">
+                </div>
             </section>
         </div>
 
